--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -91,10 +91,10 @@ body::after {
 }
 @media screen and (max-width: 960px) {
   body::after {
-    position: fixed;
+    position: absolute;
     width: auto;
     left: 30px;
-    bottom: 0;
+    bottom: -153px;
   }
 }
 @media screen and (max-width: 572px) {
@@ -244,6 +244,12 @@ main .footer form input[type=email]::placeholder {
   font-family: chivo, sans-serif;
   font-weight: 100px;
   color: #5A668A;
+}
+main .footer form #emailInfo {
+  font-weight: 700;
+  color: #FB3E3E;
+  display: block;
+  margin: 10px 32px 0;
 }
 main .footer form input[type=submit] {
   cursor: pointer;
